# src/routes/userRoute.js
@@ -1,11 +1,12 @@
 const express = require( "express")
 const auth = require("../middlewares/auth.middleware")
-const {userDashboard, updateUserInfo, forgotPassword, resetPassword, updateUserPassword} = require("../controllers/userController")
+const {userDashboard, updateUserInfo, forgotPassword, resetPassword, updateUserPassword, uploadUserPhoto} = require("../controllers/userController")
 
 const router = express.Router();
 
 router.get("/userdashboard", auth, userDashboard)
 router.patch("/userdashboard/update", auth, updateUserInfo)
+router.post("/user/upload-image", auth, uploadUserPhoto)
 router.patch("/user/update-password", auth, updateUserPassword)
 router.get("/forgot-password", auth, forgotPassword)
 router.post("/password/reset/:token", auth, resetPassword)
